--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -10,6 +10,7 @@
 }
 
 .logo {
+    margin-left: 15px;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -21,7 +22,8 @@
 }
 
 .title {
-    margin-left: 15px;
+    padding-left: 10px;
+    font-size: 26px;
     cursor: pointer;
     color: #181D27;
 }
@@ -31,7 +33,6 @@
 }
 
 .nav-menu {
-    margin-right: 15px;
     list-style-type: none;
     display: flex;
 }
@@ -43,7 +44,7 @@
 
 .nav-menu li a {
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
   font-family: "dosis", sans-serif;
   font-weight: 500;
   color: #181D27;
